# multi-model-annotator

./: .gitignore  PLAN.md  README.md  attention_fusion.py  config.py  legacy_archive.md  master_test.py  master_train.py  pyproject.toml  requirements.txt  shape_refiner.py
bbox_model/: train_bbox.py
data_prep/: coco_to_yolo.py  extract_class_priors.py  split_annotations.py
keypoint_model/: train_keypoint.py
multi_model_annotator/: __init__.py  config.py  master_test.py  master_train.py  merge_xml_annotations.py  test_polyline_seg.py
multi_model_annotator/bbox_model/: train_bbox.py
multi_model_annotator/data_prep/: extract_class_priors.py
multi_model_annotator/keypoint_seg_model/: train_keypoint_seg.py
multi_model_annotator/polygon_model/: train_polygon.py
multi_model_annotator/polygon_seg_model/: train_polygon_seg.py
multi_model_annotator/polyline_model_working/: train_polyline_seg.py
multi_model_annotator/tag_model/: train_tag.py
old_files/: master_test.py  master_test_dep.py  master_test_mlp.py  output_fusion.py  train_fusion_mlp.py
polygon_model/: train_polygon.py
polygon_seg_model/: train_polygon_seg.py
polyline_model/: train_polyline_s1.py  train_polyline_s2.py
polyline_model_working/: train_polyline_seg.py
